client/src/containers/SideBar/styles.scss
$sidebarTransition: 0.5s;

.sidenav---sidenav---_2tBP {
  a {
    text-decoration: none;
    &:hover {
      text-decoration: underline;
    }
  }
  .sidenav---navitem---9uL5T:hover {
    a {
      text-decoration: underline;
    }
  }
  .logo-wrapper {
    background: $tertiary;
    border-bottom: 4px solid $yellow;
    padding-bottom: 10px;
    padding-top: 1px;
  }
  span.logo {
    width: calc(100% - 8px);
    height: 65px;
    display: block;
    margin-top: 60px;
    margin-left: 4px;
    margin-right: 4px;
    transition: all 0.2s ease;
  }
  span.logo svg {
    margin-left: 10px;
    width: calc($sidebar-collapsed - 18px);
  }
  span.logo svg image {
    width: calc($sidebar-expanded - 8px);
  }
}

.sidenav---expanded---1KdUL {
  span.logo svg {
    margin-left: 0;
    width: calc($sidebar-expanded - 8px);
  }
}

.clusters {
  text-overflow: ellipsis;
  direction: ltr;
  white-space: nowrap;
  overflow: hidden;
  max-width: 90px;
  font-size: $font-size-base;
  vertical-align: middle;
}
.sidenav-subnav---1EN61 {
  background-color: $primary !important;
}

